--- a/src/components/Tags/Tags.scss
+++ b/src/components/Tags/Tags.scss
@@ -1,17 +1,23 @@
 .tagsContainer{
-    max-width: 500px;
-    padding: 30px 0 0;
+    // max-width: 500px;
+    padding: 0.625rem 0 0;
     display: flex;
-    justify-content:space-between;
+    justify-content:flex-start;
+    gap:0.7rem;
 }
 
 .tagElet{
-    min-width: 115px;
-    height: 25px;
-    border-radius: 10px;
-    padding: 0 10px;
+    display: block;
+    min-width: 7.188rem;
+    height: 1.563rem;
+    border-radius: 0.625rem;
+    padding: 0px 0.625rem;
     background-color: var(--red-color);
     color: var(--white-color);
     text-align: center;
-    line-height: 25px;
+    // line-height: 25px;
+    // font-size: 14px;
+    font-size: 0.875rem;
+    font-weight: 600;
+    line-height:1.625rem ;
 }
