--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,8 +1,8 @@
 .bannerContainer{
     position: relative;
     // margin: 0 100px;
-    height:223px;
-    border-radius: 25px;
+    height:13.94rem;
+    border-radius: 1.5rem;
     box-shadow: inset 0 1000px 1000px 0 rgba(0,0,0,0.30);
 
     display:flex;
@@ -17,25 +17,48 @@
 .bannerText{
     position: absolute;
     width: 100%;
-    height: 223px;
+    height: 13.94rem;
     background:#00000080;
-    font-size:48px;
+    font-size:3rem;
     font-weight: bold;
-    line-height: 223px;
+    line-height: 13.94rem;
     text-align: center;
     color:#fff;
     /* offset-x | offset-y | blur-radius | color */
     text-shadow: 0px 4px 4px #0000005b;
 }
+.bannerTextBox{
+    height: 13.94rem;;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+@media (max-width:1250px){
+    .bannerContainer{
+        margin: auto;
+        width : 90vw;
+    }
+}
 
 
-@media (max-width:576px){
+@media (max-width:700px){
 
     .bannerContainer{
         width: 90vw;
         margin: auto;
     }
     .bannerText{
-        font-size:20px;
+        padding:0 3rem;
+        line-height: 3rem;
+       
     }
+
+    .bannerTextBox{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
 }
