WIP fitting  with mock up & responsive

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -14,7 +14,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #FF6060;
-    font-family: 'Montserrat', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
     font-size: 23px;
     font-weight: 700;
     color: white;
