--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,63 +1,57 @@
-// @import "global.css";
+@import "../../scss/VariablesAndMixins";
 
-.header{
+.header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 35px 0 45px;
+    padding: 2.188rem 0 2.813rem;
 
-}
-
-.header img{
-    width:13.125rem;
-}
-
-.nav{
-    display:flex;
-    flex-direction: row;
-}
-
-ul {
-    list-style: none;
-}
-.nav-link{
-    color:var(--black-color);
-    /* font-family: 'Monserrat', sans-serif; */
-    font-size:1.438rem;
-    font-weight: 600;
-    text-decoration: none;
-    padding : 0 20px;
-    
-}
-
-.nav-link:hover{
-    color:var(--red-color);
-}
-
-@media (max-width:1250px){
-    .header{
+    @include tablet-view {
         margin: auto;
-        width : 90vw;
+        width: $headerAndMain-responsive-width;
     }
-}
 
-
-@media (max-width:700px){
-    .header{
+    @include mobile-view {
         padding: 6vw 0;
     }
-    .header img{
-        width:18rem;
+
+    &__logo,
+    &__logo>a>img {
+        width: 13.125rem;
+
+        @include mobile-view {
+            width: 18rem;
+        }
     }
-    .nav-link{
-        // font-size:12px;
-        padding:0;
-        text-transform: uppercase;
-    }
-    // .header img{
-    //     width:13.125rem;
-    // }
-    .item1{
-        padding-right: 15px;
+
+    &__nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 1.25rem;
+
+        &__link {
+            font-size: 1.438rem;
+            font-weight: 600;
+            padding: 0 1.25rem;
+            text-decoration: none;
+
+            &:hover {
+                color: $red-color !important;
+            }
+            &.isActive {
+                        text-decoration: underline;
+                    }
+
+            @include mobile-view {
+                padding: 0;
+                text-transform: uppercase;
+            }
+
+        }
+
+        
+
+
     }
 }
