To fix a bug in gitpages ,Placing index.scss and _variables AndMixins.scss in src directory

--- a/src/components/RentalCard/RentalCard.scss
+++ b/src/components/RentalCard/RentalCard.scss
@@ -1,4 +1,4 @@
-@import "../../scss/VariablesAndMixins";
+@import "../../VariablesAndMixins";
 
 //== RentalCard's variables ==
 $card-desktop-height : 21.25rem;
