--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,4 +1,4 @@
-@import "../../scss/VariablesAndMixins";
+@import "../../VariablesAndMixins";
 
 //== Slider Variables
 $slides-transitionTime: 0.3s;
