--- a/src/pages/OfferDetailsPage/OfferDetailsPage.scss
+++ b/src/pages/OfferDetailsPage/OfferDetailsPage.scss
@@ -1,5 +1,5 @@
 // $redColor: $red-color;
-@import "../../scss/VariablesAndMixins";
+@import "../../VariablesAndMixins";
 
 .offerDetailsContainer {
     margin: auto;
